removed ShouldComponentUpdate from Context. It caused rerouting to stop working. - Added the optional 'onClick' prop to StyledLink if one expects more than just rerouting to happen when clicking. (like logging out) - Changed icons used in Sidebar - Added some extra margins in StyledLink - Wrapped every child inside StyledLink in Header with a <span>. Should perhaps not be neccesary

--- a/client/components/StyledLink/style.scss
+++ b/client/components/StyledLink/style.scss
@@ -4,10 +4,11 @@
   color: $g-blue;
   display: inline-flex;
   align-items: center;
+  width: 100%;
   cursor: pointer;
 
   > :nth-child(2) {
-    margin-left: 8px;
+    margin-left: 12px;
   }
 }
 
